fix dropdown overflow issues

--- a/app/styles/modules/_dropdown.scss
+++ b/app/styles/modules/_dropdown.scss
@@ -45,7 +45,6 @@
 
 @mixin dropdown-size () {
   max-height: $dropdown-menu-max-h;
-  overflow: auto;
   -webkit-overflow-scrolling: touch;
   will-change: scroll-position;
 }
